# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  buildbuddy.yaml  deno.json  go.mod  go.sum  package.json  pnpm-lock.yaml  workspace_status.sh
ekglue/: BUILD.bazel
ekglue/cmd/ekglue/: BUILD.bazel  main.go
ekglue/cmd/ekglue-dump-config/: BUILD.bazel  main.go
ekglue/pkg/cds/: BUILD.bazel  cds.go  cds_test.go
ekglue/pkg/cds/internal/fakexds/: BUILD.bazel  fakexds.go
ekglue/pkg/glue/: BUILD.bazel  glue.go  glue_test.go
ekglue/pkg/k8s/: BUILD.bazel  k8s.go  k8s_test.go
ekglue/pkg/xds/: BUILD.bazel  xds.go  xds_test.go
ekglue/tests/config/: BUILD.bazel  config_test.go
ekglue/tests/live/: BUILD.bazel  live_test.go
ekglue/try/: BUILD.bazel  main.go
go_placeholder/: BUILD.bazel
internal/analyzers/asasalint/: BUILD.bazel
internal/analyzers/asciicheck/: BUILD.bazel
internal/analyzers/bidichk/: BUILD.bazel
internal/analyzers/depguard/: BUILD.bazel  depguard.go
internal/analyzers/errcheck/: BUILD.bazel  errcheck.go
internal/analyzers/exhaustive/: BUILD.bazel
internal/analyzers/gofmt/: BUILD.bazel  gofmt.go
internal/analyzers/goprintffuncname/: BUILD.bazel  goprintffuncname.go
internal/analyzers/ineffassign/: BUILD.bazel
internal/analyzers/staticcheck/: BUILD.bazel  def.bzl
internal/analyzers/wrapcheck/: BUILD.bazel  wrapcheck.go
internal/apt/: BUILD.bazel  apt.lock.json  apt.yaml
internal/errors/: BUILD.bazel  errors.go  multi.go
internal/links/: BUILD.bazel  links.go  links_test.go
internal/log/: BUILD.bazel  benchmark_test.go  context_test.go  encoders.go  field.go  field_test.go  log.go  loggers.go  testing.go
internal/log/try/: BUILD.bazel  main.go
internal/meters/: BUILD.bazel  meters.go  meters_test.go
internal/oci/: BUILD.bazel  transition.bzl
internal/pctx/: BUILD.bazel  context.go  context_test.go  examples_test.go  testing.go
internal/protoextensions/: BUILD.bazel
internal/run_hugo/: BUILD.bazel  main.go
internal/tarutil/: BUILD.bazel  tarutil.go
internal/testpostgres/: BUILD.bazel  testpostgres.go  testpostgres_test.go
jlog/cmd/internal/jlog/: BUILD.bazel  jlog.go  jlog_test.go
jlog/cmd/jlog/: BUILD.bazel  main.go
jlog/integration-tests/: BUILD.bazel  loggers_test.go
jlog/pkg/parse/: BUILD.bazel  default_formats.go  default_parsers.go  default_parsers_test.go  encoder.go  encoder_test.go  filter.go  parse.go  parse_fuzz_test.go  parse_test.go
jlog/pkg/parse/internal/fuzzsupport/: BUILD.bazel
jlog/pkg/parse/internal/fuzzsupport/cmd/readLogCorpus/: BUILD.bazel  main.go
jsso2/: BUILD.bazel  package-lock.json  package.json
jsso2/cmd/jsso-regenerate-db/: BUILD.bazel  main.go
jsso2/cmd/jsso2/: BUILD.bazel  main.go
jsso2/cmd/jsso2-envoy-authz/: BUILD.bazel  main.go
jsso2/cmd/jsso2-protected-example/: BUILD.bazel  main.go
jsso2/cmd/jsso2-test-dev-proxy/: BUILD.bazel  main.go
jsso2/cmd/jssoctl/: BUILD.bazel  main.go
jsso2/e2e/: BUILD.bazel  e2e_test.go
jsso2/migrations/: BUILD.bazel
jsso2/pkg/client/: BUILD.bazel  client.go
jsso2/pkg/envoyauthz/: BUILD.bazel  envoyauthz.go
jsso2/pkg/internalauth/: BUILD.bazel  internalauth.go  internalauth_test.go
jsso2/pkg/jsso/: BUILD.bazel  doc.go  enrollment_test.go  session_test.go
jsso2/pkg/jsso/cmd/: BUILD.bazel  cmd.go
jsso2/pkg/jsso/enrollment/: BUILD.bazel  enrollment.go
jsso2/pkg/jsso/login/: BUILD.bazel  login.go
jsso2/pkg/jsso/session/: BUILD.bazel  session.go
jsso2/pkg/jsso/user/: BUILD.bazel  user.go
jsso2/pkg/jssoctl/cmd/: BUILD.bazel  dev.go  grpc.go  root.go  users.go  users_test.go
jsso2/pkg/jssopb/: BUILD.bazel  doc.go  jsso.pb.go
jsso2/pkg/jtesting/: BUILD.bazel  jtesting.go  jtesting_test.go
jsso2/pkg/logout/: BUILD.bazel  logout.go
jsso2/pkg/redirecttokens/: BUILD.bazel  redirecttokens.go
jsso2/pkg/sessions/: BUILD.bazel  cookies.go  cookies_test.go  sessions.go  sessions_test.go
jsso2/pkg/store/: BUILD.bazel  credential.go  credential_test.go  migrate.go  session.go  session_test.go  store.go  testing.go  tx_test.go  user.go  user_test.go
jsso2/pkg/testserver/: BUILD.bazel  testserver.go
jsso2/pkg/tokens/: BUILD.bazel  tokens.go  tokens_test.go
jsso2/pkg/types/: BUILD.bazel  doc.go
jsso2/pkg/util/zapwriter/: BUILD.bazel  zapwriter.go
jsso2/pkg/web/: BUILD.bazel  web.go
jsso2/pkg/webauthn/: BUILD.bazel  webauthn.go  webauthn_test.go
jsso2/pkg/webauthnpb/: BUILD.bazel  doc.go
jsso2/protos/: jsso.proto  types.proto  webauthn.proto
matrix-clock/: BUILD.bazel  chrony.go  clock.go  gpsd.go  influx.go  main.go  sensors.go  template.go
opinionated-server/client/: BUILD.bazel  client.go  client_fuzz_test.go  client_test.go
opinionated-server/client/internal/fuzzsupport/: BUILD.bazel  generator.go
opinionated-server/example/: BUILD.bazel  main.go
opinionated-server/internal/formatters/: BUILD.bazel  formatters.go
opinionated-server/server/: BUILD.bazel  rpclog.go  rpclog_test.go  server.go  server_test.go
serveme/: BUILD.bazel  README.md  main.go
tools/: BUILD.bazel  tools.go
tools/hugo/: BUILD.bazel  extensions.bzl
tools/patchelf/: BUILD.bazel  extensions.bzl
tools/postgres/: BUILD.bazel  extensions.bzl
tools/postgres/postgres/: BUILD.bazel  main.go
tools/postgres/psql/: BUILD.bazel  main.go
version-bump/: .goreleaser.yml  BUILD.bazel  main.go
www.jrock.us/: BUILD.bazel  mutate_assets_mtree.awk  postcss.mjs
