module(
    name = "monorepo",
    repo_name = "com_github_jrockway_monorepo",
)

bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_go", version = "0.50.1")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:nogo")
go_sdk.download(
    name = "go_sdk",
    version = "1.23.3",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "co_honnef_go_tools",
    "com_github_alingse_asasalint",
    "com_github_breml_bidichk",
    "com_github_golangci_go_printf_func_name",
    "com_github_golangci_gofmt",
    "com_github_gordonklaus_ineffassign",
    "com_github_kisielk_errcheck",
    "com_github_nishanths_exhaustive",
    "com_github_openpeedeep_depguard_v2",
    "com_github_pkg_errors",
    "com_github_tdakkota_asciicheck",
    "com_github_tomarrell_wrapcheck_v2",
    "org_golang_x_tools",
)
