module(
    name = "monorepo",
    repo_name = "com_github_jrockway_monorepo",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")
bazel_dep(name = "aspect_rules_js", version = "2.1.1")
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_nodejs", version = "6.3.2")
bazel_dep(name = "rules_oci", version = "2.0.1")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

# go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:nogo")
go_sdk.download(
    name = "go_sdk",
    version = "1.23.3",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "co_honnef_go_tools",
    "com_github_alingse_asasalint",
    "com_github_breml_bidichk",
    "com_github_golangci_go_printf_func_name",
    "com_github_golangci_gofmt",
    "com_github_gordonklaus_ineffassign",
    "com_github_kisielk_errcheck",
    "com_github_nishanths_exhaustive",
    "com_github_openpeedeep_depguard_v2",
    "com_github_pkg_errors",
    "com_github_tdakkota_asciicheck",
    "com_github_tomarrell_wrapcheck_v2",
    "org_golang_x_tools",
)

# javascript
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(
    name = "nodejs",
    node_version_from_nvmrc = "//:.nvmrc",
)
use_repo(node, "nodejs")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# oci
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "nginx",
    digest = "sha256:0c86dddac19f2ce4fd716ac58c0fd87bf69bfd4edabfd6971fb885bafd12a00b",
    image = "docker.io/library/nginx",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "1.27.3",
)
use_repo(oci, "nginx", "nginx_linux_amd64", "nginx_linux_arm64_v8")
