load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_placeholder_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/monorepo/go_placeholder",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go_placeholder",
    embed = [":go_placeholder_lib"],
    visibility = ["//visibility:public"],
)
