load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "meters",
    srcs = ["meters.go"],
    importpath = "github.com/jrockway/monorepo/internal/meters",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/log",
        "@org_golang_x_exp//constraints",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "meters_test",
    srcs = ["meters_test.go"],
    embed = [":meters"],
    deps = [
        "//internal/log",
        "@com_github_google_go_cmp//cmp",
        "@org_uber_go_zap//:zap",
    ],
)
