load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoextensions",
    srcs = ["protoextensions.go"],
    importpath = "github.com/jrockway/monorepo/internal/protoextensions",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "protoextensions_test",
    srcs = ["protoextensions_test.go"],
    embed = [":protoextensions"],
    deps = ["@org_uber_go_zap//zapcore"],
)
