load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testpostgres",
    srcs = ["testpostgres.go"],
    data = select({
        "//:is_linux": ["//internal/apt:postgres_host_tar"],
        "//:is_macos": ["@com_enterprisedb_get_postgresql_macos//:bin/psql"],
    }),
    importpath = "github.com/jrockway/monorepo/internal/testpostgres",
    visibility = ["//:__subpackages__"],
    x_defs = select({
        "//:is_linux": {"postgresArchiveRlocation": "$(rlocationpath //internal/apt:postgres_host_tar)"},
        "//:is_macos": {"psqlBinaryRlocation": "$(rlocationpath @com_enterprisedb_get_postgresql_macos//:bin/psql)"},
    }),
    deps = [
        "//internal/errors",
        "//internal/log",
        "//internal/pctx",
        "//internal/tarutil",
        "@com_github_jackc_pgx_v4//:pgx",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "testpostgres_test",
    srcs = ["testpostgres_test.go"],
    embed = [":testpostgres"],
    deps = [
        "//internal/pctx",
        "@com_github_google_go_cmp//cmp",
        "@com_github_jackc_pgx_v4//:pgx",
    ],
)
