load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/monorepo/opinionated-server/example",
    visibility = ["//visibility:private"],
    deps = [
        "//opinionated-server/server",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "example",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)
