load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

native_binary(
    name = "patchelf",
    src = select({
        "//:is_amd64_linux": "@patchelf_amd64_linux//:bin/patchelf",
        "//:is_arm64_linux": "@patchelf_arm64_linux//:bin/patchelf",
    }),
    out = "patchelf",
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
)
