load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ekglue-dump-config_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/monorepo/ekglue/cmd/ekglue-dump-config",
    visibility = ["//visibility:private"],
    deps = [
        "//ekglue/pkg/cds",
        "//ekglue/pkg/glue",
        "//ekglue/pkg/k8s",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_klog//:klog",
    ],
)

go_binary(
    name = "ekglue-dump-config",
    embed = [":ekglue-dump-config_lib"],
    visibility = ["//visibility:public"],
)
