load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ekglue_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/monorepo/ekglue/cmd/ekglue",
    visibility = ["//visibility:private"],
    deps = [
        "//ekglue/pkg/cds",
        "//ekglue/pkg/glue",
        "//ekglue/pkg/k8s",
        "//opinionated-server/server",
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2:api",
        "@com_github_envoyproxy_go_control_plane//envoy/service/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/service/endpoint/v3:endpoint",
        "@io_k8s_client_go//tools/cache",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "ekglue",
    embed = [":ekglue_lib"],
    visibility = ["//visibility:public"],
)
